test/langtools/tools/javac/valhalla/lworld-values/ValueConcreteSuperType.out
ValueConcreteSuperType.java:9:27: compiler.err.concrete.supertype.for.value.class: ValueConcreteSuperType.H, ValueConcreteSuperType
1 error
